fixed button spacing

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -2578,6 +2578,7 @@ p.button a {
   padding:10px 14px;
   color: #ffffff !important;
   margin: 0 12px;
+  margin-bottom: 10px;
   font-family: robotocondensed;
   font-size: 18px;
   font-weight: bold;
